completed contact section for mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
         <section id="home" class="home section container container-padding-1 relative flex items-center justify-center flex-col w-full">    
             <div class="profile relative">
                 <!-- home profile image -->
-                <img class="image relative z-20 w-40 h-40 rounded-full object-cover border-[0.25rem] border-solid" src="assets/images/me/me-b&w.jpg" alt="Profile">
+                <img class="image relative z-20 w-40 h-40 rounded-full object-cover border-[0.25rem] border-solid" src="assets/images/me/me-w.jpg" alt="Profile">
                 <span class="name absolute z-30 flex items-center justify-center text-xs font-bold rounded-full w-28 pt-4 pb-4 p-3">
                     Daniel Ade &nbsp;👋🏼 
                 </span>
@@ -105,7 +105,7 @@
                 Collaborate with brands<br> to create impactful<br> results.
             </h1>
 
-            <span class="title text-sm font-bold rounded-full mt-14 p-2 flex items-center justify-center">
+            <span class="title text-sm w-28 h-12 font-bold rounded-full mt-14 p-2 flex items-center justify-center">
                 Services
             </span>
 
@@ -114,14 +114,14 @@
                     <div class="box m-1">
                         <img src="assets/images/descriptions/data.png" alt="Data" class="descriptive-icon w-10 h-10 mb-5">
                         <h2 class="text text-lg font-medium mb-4">Data Analysis</h2>
-                        <p class="info text-sm">
+                        <p class="info">
                             Designing interfaces that are intuitive, efficient, and enjoyable to use.
                         </p>
                     </div>
                     <div class="box m-1">
                         <img src="assets/images/descriptions/coding.png" alt="Coding" class="descriptive-icon w-10 h-10 mb-5">
                         <h2 class="text text-lg font-medium mb-4">Web Development</h2>
-                        <p class="info text-sm">
+                        <p class="info">
                             Transforming ideas into exceptional web and mobile app experiences.
                         </p>
                     </div>
@@ -130,14 +130,14 @@
                     <div class="box m-1">
                         <img src="assets/images/descriptions/web-design.png" alt="Design" class="descriptive-icon w-10 h-10 mb-5">
                         <h2 class="text text-lg font-medium mb-4">UI & UX</h2>
-                        <p class="info text-sm">
+                        <p class="info">
                             Crafting visually stunning designs that connect with your audience.
                         </p>
                     </div>
                     <div class="box m-1">
                         <img src="assets/images/descriptions/quality.png" alt="Quality" class="descriptive-icon w-10 h-10 mb-5">
                         <h2 class="text text-lg font-medium mb-4">Quality Assurance</h2>
-                        <p class="info text-sm">
+                        <p class="info">
                             Bringing your vision to life with the latest technology and design trends.
                         </p>
                     </div>
@@ -148,7 +148,26 @@
 
          <!--====== CONTACT ======-->
          <section id="contact" class="contact section container container-padding-1">
+            <!-- image & title -->
+             <div class="heading flex items-center flex-col">
+                <div class="image-container rounded-full flex items-center justify-center">
+                    <img src="assets/images/descriptions/hand-shake.png" alt="Contact" class="w-24 h-24">
+                </div>
 
+                <h1 class="title mt-8 text-6xl gradient-text text-center">
+                    Tell me about your next<br> project
+                </h1>
+             </div>
+            <!-- action buttons -->
+            <div class="actions flex items-center justify-center mt-8 text-xs font-medium">
+                <a href="mailto:danieladeofficial@gmail.com" class="flex items-center justify-center w-24 h-12 rounded-full mr-2 p-2">
+                    <i class="ri-mail-send-line mr-2"></i>
+                    <span>Email Me</span>
+                </a>
+                <a href="#" class="flex items-center justify-center w-24 h-12 rounded-full p-2">
+                    WhatsApp
+                </a>
+            </div>
          </section>
 
     
