completed contact section for mobile view 3

--- a/public/index.html
+++ b/public/index.html
@@ -147,7 +147,7 @@
 
 
          <!--====== CONTACT ======-->
-         <section id="contact" class="contact section container container-padding-1">
+         <section id="contact" class="contact section container container-padding-1 mb-7">
             <!-- image & title -->
              <div class="heading flex items-center flex-col">
                 <div class="image-container rounded-full flex items-center justify-center">
@@ -159,16 +159,20 @@
                 </h1>
              </div>
             <!-- action buttons -->
-            <div class="actions flex items-center justify-center mt-8 text-xs font-medium">
+            <div class="actions flex items-center justify-center mt-9 text-xs font-medium">
                 <a href="mailto:danieladeofficial@gmail.com" class="flex items-center justify-center w-24 h-12 rounded-full mr-2 p-2">
                     <i class="ri-mail-send-line mr-2"></i>
-                    <span>Email Me</span>
+                    <span>Email</span>
                 </a>
                 <a href="#" class="flex items-center justify-center w-24 h-12 rounded-full p-2">
                     WhatsApp
                 </a>
             </div>
          </section>
+
+         <footer id="footer" class="footer section container container-padding-1">
+
+         </footer>
 
     
     </div>
