changed home profile image

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
         <section id="home" class="home section container container-padding-1 relative flex items-center justify-center flex-col w-full">    
             <div class="profile relative">
                 <!-- home profile image -->
-                <img class="image relative z-20 w-40 h-40 rounded-full object-cover border-[0.25rem] border-solid" src="assets/images/me/me-w.jpg" alt="Profile">
+                <img class="image relative z-20 w-40 h-40 rounded-full object-cover border-[0.25rem] border-solid" src="assets/images/me/me-b&w.jpg" alt="Profile">
                 <span class="name absolute z-30 flex items-center justify-center text-xs font-bold rounded-full w-28 pt-4 pb-4 p-3">
                     Daniel Ade &nbsp;👋🏼 
                 </span>
