experimenting with carousel logos

--- a/public/index.html
+++ b/public/index.html
@@ -91,10 +91,10 @@
         <!--====== CAROUSEL ======-->
         <section id="carousel" class="carousel container container-padding-2 relative flex items-center justify-center bg-transparent">
             <!-- logos -->
-            <img src="assets/images/logos/python-cd.png" alt="Logo" class="logo object-cover mr-10">
-            <img src="assets/images/logos/react-cd.png" alt="Logo" class="logo object-cover mr-10">
             <img src="assets/images/logos/office-cd.png" alt="Logo" class="logo object-cover mr-10">
-            <img src="assets/images/logos/git-bl.png" alt="Logo" class="logo object-cover mr-10">
+            <img src="assets/images/logos/python.png" alt="Logo" class="logo object-cover mr-10 w-8 h-8">
+            <img src="assets/images/logos/react.png" alt="Logo" class="logo object-cover mr-10">
+            <img src="assets/images/logos/git.png" alt="Logo" class="logo object-cover mr-10">
             <img src="assets/images/logos/vscode-cd.png" alt="Logo" class="logo object-cover mr-10">
         </section>
 
