completed footer for mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
             <div class="nav__social__links flex">
                 <!-- mobile -->
                 <div class="mobile hidden items-center text-xl">
-                    <a href="#" class="flex items-center justify-center mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="#" class="flex items-center justify-center mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
+                    <a href="#" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="#" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
                     <a href="https://www.instagram.com/heisdanielade/" class="flex items-center justify-center rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
                 </div>
                 <!-- desktop -->
@@ -89,7 +89,7 @@
 
 
         <!--====== CAROUSEL ======-->
-        <section id="carousel" class="carousel container container-padding-2 relative flex items-center justify-center bg-transparent">
+        <section id="carousel" class="carousel container container-padding-2 relative flex items-center justify-center bg-transparent w-full">
             <!-- logos -->
             <img src="assets/images/logos/office-cd.png" alt="Logo" class="logo object-cover mr-10">
             <img src="assets/images/logos/python.png" alt="Logo" class="logo object-cover mr-10 w-8 h-8">
@@ -112,15 +112,15 @@
             <div class="serv-con mt-8 mb-5 flex">
                 <div class="con-1 flex items-center justify-center mb-8">
                     <div class="box m-1">
-                        <img src="assets/images/descriptions/data.png" alt="Data" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-4">Data Analysis</h2>
+                        <img src="assets/images/descriptions/data.png" alt="Data" class="descriptive-icon w-8 h-8 mb-5">
+                        <h2 class="text text-lg font-medium mb-3">Data Analysis</h2>
                         <p class="info">
                             Designing interfaces that are intuitive, efficient, and enjoyable to use.
                         </p>
                     </div>
                     <div class="box m-1">
-                        <img src="assets/images/descriptions/coding.png" alt="Coding" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-4">Web Development</h2>
+                        <img src="assets/images/descriptions/coding.png" alt="Coding" class="descriptive-icon w-8 h-8 mb-5">
+                        <h2 class="text text-lg font-medium mb-3">Web Development</h2>
                         <p class="info">
                             Transforming ideas into exceptional web and mobile app experiences.
                         </p>
@@ -128,15 +128,15 @@
                 </div>
                 <div class="con-2 flex items-center justify-center">
                     <div class="box m-1">
-                        <img src="assets/images/descriptions/web-design.png" alt="Design" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-4">UI & UX</h2>
+                        <img src="assets/images/descriptions/web-design.png" alt="Design" class="descriptive-icon w-8 h-8 mb-5">
+                        <h2 class="text text-lg font-medium mb-3">UI & UX</h2>
                         <p class="info">
                             Crafting visually stunning designs that connect with your audience.
                         </p>
                     </div>
                     <div class="box m-1">
-                        <img src="assets/images/descriptions/quality.png" alt="Quality" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-4">Quality Assurance</h2>
+                        <img src="assets/images/descriptions/quality.png" alt="Quality" class="descriptive-icon w-8 h-8 mb-5">
+                        <h2 class="text text-lg font-medium mb-3">Quality Assurance</h2>
                         <p class="info">
                             Bringing your vision to life with the latest technology and design trends.
                         </p>
@@ -147,7 +147,7 @@
 
 
          <!--====== CONTACT ======-->
-         <section id="contact" class="contact section container container-padding-1 mb-7">
+         <section id="contact" class="contact section container container-padding-1 mb-2">
             <!-- image & title -->
              <div class="heading flex items-center flex-col">
                 <div class="image-container rounded-full flex items-center justify-center">
@@ -170,8 +170,22 @@
             </div>
          </section>
 
-         <footer id="footer" class="footer section container container-padding-1">
+         <footer id="footer" class="footer section container container-padding-1 flex items-center flex-col">
+            <div class="line mb-12 w-full"></div>
 
+            <div class="content flex items-center justify-between w-full">
+                <div class="arr">
+                    <p class="text-xs font-medium mt-3">
+                        &copy; 2024 All rights reserved.
+                    </p>
+                </div>
+    
+                <div class="socials flex items-center justify-center text-xl">
+                    <a href="#" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="#" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-stack-overflow-line"></i></a>
+                    <a href="https://www.instagram.com/heisdanielade/" class="flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a>
+                </div>
+            </div>
          </footer>
 
     
