--- a/public/index.html
+++ b/public/index.html
@@ -61,10 +61,10 @@
     </header>
 
     <!--======== MAIN ========-->
-    <main class="main">
+    <main class="main container w-full flex flex-col items-center w-full">
 
         <!--====== HOME ======-->
-        <section id="home" class="home section container container-padding-1 relative flex items-center justify-center flex-col w-full">    
+        <section id="home" class="home section container container-padding-1 relative flex items-center justify-center flex-col">    
             <div class="profile relative">
                 <!-- home profile image -->
                 <img class="image relative z-20 w-40 h-40 rounded-full object-cover border-[0.25rem] border-solid" src="assets/images/me/me-b&w.jpg" alt="Profile">
@@ -78,7 +78,7 @@
                 <h1 class="info text-center text-6xl gradient-text mt-20">
                     <!-- inline-block whitespace-pre-wrap break-words -->
 
-                    Building digital<br> products, brands and experiences.
+                    Crafting digital<br> spaces, products and experiences.
                 </h1>
                 <a href="https://github.com/heisdanielade" class="github__link flex items-center justify-center mt-12 mb-11 w-44 h-14 rounded-full">
                     <span class="font-medium text-xs">GitHub</span>
@@ -89,7 +89,7 @@
 
 
         <!--====== CAROUSEL ======-->
-        <section id="carousel" class="carousel container container-padding-2 relative flex items-center justify-center bg-transparent w-full">
+        <section id="carousel" class="carousel container container-padding-2 relative flex items-center justify-center bg-transparent">
             <!-- logos -->
             <img src="assets/images/logos/office-cd.png" alt="Logo" class="logo object-cover mr-10">
             <img src="assets/images/logos/python.png" alt="Logo" class="logo object-cover mr-10 w-8 h-8">
@@ -100,17 +100,17 @@
 
         
         <!--====== SERVICES ======-->
-        <section id="services" class="services section container container-padding-1 flex items-center justify-center flex-col">
+        <section id="services" class="services section container container-padding-1 relative flex items-center justify-center flex-col">
             <h1 class="title-info text-center text-4xl gradient-text">
-                Collaborate with brands<br> to create impactful<br> results.
+                Let's collaborate to<br>create achieve remarkable<br> outcomes.
             </h1>
 
             <span class="title text-sm w-28 h-12 font-bold rounded-full mt-14 p-2 flex items-center justify-center">
                 Services
             </span>
 
-            <div class="serv-con mt-8 mb-5 flex">
-                <div class="con-1 flex items-center justify-center mb-8">
+            <div class="serv-con mt-8 mb-5 flex items-center justify-evenly w-full">
+                <div class="con-1 flex items-center justify-evenly">
                     <div class="box m-1">
                         <img src="assets/images/descriptions/data.png" alt="Data" class="descriptive-icon w-8 h-8 mb-5">
                         <h2 class="text text-lg font-medium mb-3">Data Analysis</h2>
@@ -126,7 +126,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="con-2 flex items-center justify-center">
+                <div class="con-2 flex items-center justify-evenly">
                     <div class="box m-1">
                         <img src="assets/images/descriptions/web-design.png" alt="Design" class="descriptive-icon w-8 h-8 mb-5">
                         <h2 class="text text-lg font-medium mb-3">UI & UX</h2>
@@ -147,7 +147,7 @@
 
 
          <!--====== CONTACT ======-->
-         <section id="contact" class="contact section container container-padding-1 mb-2">
+         <section id="contact" class="contact section container container-padding-1">
             <!-- image & title -->
              <div class="heading flex items-center flex-col">
                 <div class="image-container rounded-full flex items-center justify-center">
@@ -155,7 +155,7 @@
                 </div>
 
                 <h1 class="title mt-8 text-6xl gradient-text text-center">
-                    Tell me about your next<br> project
+                    Discuss your next<br> project
                 </h1>
              </div>
             <!-- action buttons -->
@@ -170,7 +170,7 @@
             </div>
          </section>
 
-         <footer id="footer" class="footer section container container-padding-1 flex items-center flex-col">
+         <footer id="footer" class="footer section container container-padding-1 relative flex items-center flex-col">
             <div class="line mb-12 w-full"></div>
 
             <div class="content flex items-center justify-between w-full">
@@ -180,6 +180,7 @@
                     </p>
                 </div>
     
+                <!-- social links -->
                 <div class="socials flex items-center justify-center text-xl">
                     <a href="#" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
                     <a href="#" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-stack-overflow-line"></i></a>
