added temporary favicon

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-brands/css/uicons-brands.css'>
     <!-- Page details -->
     <title>Portfolio | heisdanielade</title>
+    <link rel="shortcut icon" href="assets/images/cursors/geometric-arrow.png" type="image/x-icon">
 </head>
 
 <body>
