added avatar to home profile

--- a/public/index.html
+++ b/public/index.html
@@ -35,40 +35,41 @@
                 <a href="mailto:danieladeofficial@gmail.com" class="email flex items-center justify-center w-20 h-10 rounded-full mr-2">
                     Email
                 </a>
-                <button id="language" class="language flex items-center justify-center w-12 h-11 font-extrabold">
+                <button id="language" class="language text-xs flex items-center justify-center w-12 h-11 font-extrabold">
                    <span class="lang-icon english hidden">🇬🇧</span>
                    <span class="lang-icon polish">🇵🇱</span>
                 </button>
-                <!--  🇩🇪 -->
+                <!-- 🇬🇧  🇵🇱  🇩🇪 -->
             </div>
             <!-- Social links-->
             <div class="nav__social__links flex">
                 <!-- mobile -->
                 <div class="mobile hidden items-center text-xl">
-                    <a href="#" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="#" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
-                    <a href="https://www.instagram.com/heisdanielade/" class="flex items-center justify-center rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
+                    <a href="#" target="_blank" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="#" target="_blank" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
+                    <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
                 </div>
                 <!-- desktop -->
                 <div class="desktop text-sm">
-                    <a href="#">LinkedIn</a>
+                    <a href="#" target="_blank">LinkedIn</a>
                     <span class="slash font-bold ml-1 mr-1">/</span>
-                    <a href="#">Stackoverflow</a>
+                    <a href="#" target="_blank">Stackoverflow</a>
                     <span class="slash font-bold ml-1 mr-1">/</span>
-                    <a href="https://www.instagram.com/heisdanielade/">Instagram</a>
+                    <a href="https://www.instagram.com/heisdanielade/" target="_blank">Instagram</a>
                 </div>
             </div>
         </nav>
     </header>
 
     <!--======== MAIN ========-->
-    <main class="main container w-full flex flex-col items-center w-full">
+    <main class="main container flex flex-col items-center w-full">
 
         <!--====== HOME ======-->
         <section id="home" class="home section container container-padding-1 relative flex items-center justify-center flex-col">    
             <div class="profile relative">
                 <!-- home profile image -->
-                <img class="image relative z-20 w-40 h-40 rounded-full object-cover border-[0.25rem] border-solid" src="assets/images/me/me-b&w.jpg" alt="Profile">
+                <img class="image relative z-20 w-40 h-40 rounded-full object-cover border-[0.2rem] border-solid" 
+                src="assets/images/me/avatar-2.jpg" alt="Profile">
                 <span class="name absolute z-30 flex items-center justify-center text-xs font-bold rounded-full w-28 pt-4 pb-4 p-3">
                     Daniel Ade &nbsp;👋🏼 
                 </span>
@@ -81,7 +82,7 @@
 
                     Crafting digital<br> spaces, products and experiences.
                 </h1>
-                <a href="https://github.com/heisdanielade" class="github__link flex items-center justify-center mt-12 mb-11 w-44 h-14 rounded-full">
+                <a href="https://github.com/heisdanielade" target="_blank" class="github__link flex items-center justify-center mt-12 mb-11 w-44 h-14 rounded-full">
                     <span class="font-medium text-xs">GitHub</span>
                     <i class="ri-arrow-right-up-line underline font-light text-sm ml-2"></i>
                 </a>                
@@ -161,11 +162,11 @@
              </div>
             <!-- action buttons -->
             <div class="actions flex items-center justify-center mt-9 text-xs font-medium">
-                <a href="mailto:danieladeofficial@gmail.com" class="flex items-center justify-center w-24 h-12 rounded-full mr-2 p-2">
+                <a href="mailto:danieladeofficial@gmail.com" target="_blank" class="flex items-center justify-center w-24 h-12 rounded-full mr-2 p-2">
                     <i class="ri-mail-send-line mr-2"></i>
                     <span>Email</span>
                 </a>
-                <a href="#" class="flex items-center justify-center w-24 h-12 rounded-full p-2">
+                <a href="#" target="_blank" class="flex items-center justify-center w-24 h-12 rounded-full p-2">
                     WhatsApp
                 </a>
             </div>
@@ -183,9 +184,9 @@
     
                 <!-- social links -->
                 <div class="socials flex items-center justify-center text-xl">
-                    <a href="#" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="#" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-stack-overflow-line"></i></a>
-                    <a href="https://www.instagram.com/heisdanielade/" class="flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a>
+                    <a href="#" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="#" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-stack-overflow-line"></i></a>
+                    <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a>
                 </div>
             </div>
          </footer>
