--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-brands/css/uicons-brands.css'>
     <!-- Page details -->
     <title>Portfolio | heisdanielade</title>
-    <link rel="shortcut icon" href="assets/images/cursors/geometric-arrow.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/me/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -45,13 +45,13 @@
             <div class="nav__social__links flex">
                 <!-- mobile -->
                 <div class="mobile hidden items-center text-xl">
-                    <a href="#" target="_blank" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
                     <a href="#" target="_blank" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
                     <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
                 </div>
                 <!-- desktop -->
                 <div class="desktop text-sm">
-                    <a href="#" target="_blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank">LinkedIn</a>
                     <span class="slash font-bold ml-1 mr-1">/</span>
                     <a href="#" target="_blank">Stackoverflow</a>
                     <span class="slash font-bold ml-1 mr-1">/</span>
@@ -70,7 +70,7 @@
                 <!-- home profile image -->
                 <img class="image relative z-20 w-40 h-40 rounded-full object-cover border-[0.2rem] border-solid" 
                 src="assets/images/me/avatar-2.jpg" alt="Profile">
-                <span class="name absolute z-30 flex items-center justify-center text-xs font-bold rounded-full w-28 pt-4 pb-4 p-3">
+                <span class="name absolute z-30 flex items-center justify-center text-xs rounded-full w-28 pt-4 pb-4 p-3">
                     Daniel Ade &nbsp;👋🏼 
                 </span>
                 <!-- curved arrow -->
@@ -184,7 +184,7 @@
     
                 <!-- social links -->
                 <div class="socials flex items-center justify-center text-xl">
-                    <a href="#" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
                     <a href="#" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-stack-overflow-line"></i></a>
                     <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a>
                 </div>
