cleared space in repo, made minor UI changes and added nothin coffee animated icon

--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,11 @@
                 <a href="mailto:danieladeofficial@gmail.com" class="email flex items-center justify-center w-20 h-10 rounded-full mr-2">
                     Email
                 </a>
-                <button id="language" class="language text-xs flex items-center justify-center w-12 h-11 font-extrabold">
-                   <span class="lang-icon english hidden">🇬🇧</span>
-                   <span class="lang-icon polish">🇵🇱</span>
+                <button id="nothing" class="nothing text-xs flex items-center justify-center w-12 h-11 font-extrabold">
+                   <!-- <span class="noth-icon"><i class="ri-cup-line"></i></span> -->
+                   <span class="noth-icon">
+                    <img src="assets/images/descriptions/coffee-cup.gif" alt="Coffee" class="w-8 h-8">
+                   </span>
                 </button>
                 <!-- 🇬🇧  🇵🇱  🇩🇪 -->
             </div>
@@ -46,14 +48,14 @@
                 <!-- mobile -->
                 <div class="mobile hidden items-center text-xl">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="#" target="_blank" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
+                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
                     <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
                 </div>
                 <!-- desktop -->
                 <div class="desktop text-sm">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank">LinkedIn</a>
                     <span class="slash font-bold ml-1 mr-1">/</span>
-                    <a href="#" target="_blank">Stackoverflow</a>
+                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank">Stackoverflow</a>
                     <span class="slash font-bold ml-1 mr-1">/</span>
                     <a href="https://www.instagram.com/heisdanielade/" target="_blank">Instagram</a>
                 </div>
@@ -71,7 +73,7 @@
                 <img class="image relative z-20 w-40 h-40 rounded-full object-cover border-[0.2rem] border-solid" 
                 src="assets/images/me/avatar-2.jpg" alt="Profile">
                 <span class="name absolute z-30 flex items-center justify-center text-xs rounded-full w-28 pt-4 pb-4 p-3">
-                    Daniel Ade &nbsp;👋🏼 
+                    I'm Daniel &nbsp;👋🏼 
                 </span>
                 <!-- curved arrow -->
                 <img src="assets/svg/curved-arrow.svg" alt="Curved-arrow" class="arrow z-10 absolute w-20 h-20">
@@ -104,7 +106,7 @@
         <!--====== SERVICES ======-->
         <section id="services" class="services section container container-padding-1 relative flex items-center justify-center flex-col">
             <h1 class="title-info text-center text-4xl gradient-text">
-                Let's collaborate to<br>create achieve remarkable<br> outcomes.
+                Let's collaborate to<br> achieve remarkable<br> outcomes.
             </h1>
 
             <span class="title text-sm w-28 h-12 font-bold rounded-full mt-14 p-2 flex items-center justify-center">
@@ -117,14 +119,14 @@
                         <img src="assets/images/descriptions/data.png" alt="Data" class="descriptive-icon w-8 h-8 mb-5">
                         <h2 class="text text-lg font-medium mb-3">Data Analysis</h2>
                         <p class="info">
-                            Designing interfaces that are intuitive, efficient, and enjoyable to use.
+                            Conducting analyses that<br class="text-break hidden"> are insightful and accurate for your needs.
                         </p>
                     </div>
                     <div class="box m-1">
                         <img src="assets/images/descriptions/coding.png" alt="Coding" class="descriptive-icon w-8 h-8 mb-5">
                         <h2 class="text text-lg font-medium mb-3">Web Development</h2>
                         <p class="info">
-                            Transforming ideas into exceptional web and mobile app experiences.
+                            Turning concepts into outstanding web app experiences.
                         </p>
                     </div>
                 </div>
@@ -133,14 +135,14 @@
                         <img src="assets/images/descriptions/web-design.png" alt="Design" class="descriptive-icon w-8 h-8 mb-5">
                         <h2 class="text text-lg font-medium mb-3">UI & UX</h2>
                         <p class="info">
-                            Crafting visually stunning designs that connect with your audience.
+                            Creating visually striking designs that resonate with your audience.
                         </p>
                     </div>
                     <div class="box m-1">
                         <img src="assets/images/descriptions/quality.png" alt="Quality" class="descriptive-icon w-8 h-8 mb-5">
                         <h2 class="text text-lg font-medium mb-3">Quality Assurance</h2>
                         <p class="info">
-                            Bringing your vision to life with the latest technology and design trends.
+                            Ensuring your vision comes to life with top-tier quality and testing standards.
                         </p>
                     </div>
                 </div>
@@ -185,7 +187,7 @@
                 <!-- social links -->
                 <div class="socials flex items-center justify-center text-xl">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="#" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-stack-overflow-line"></i></a>
+                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-stack-overflow-line"></i></a>
                     <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a>
                 </div>
             </div>
