change more icons to animated icons

--- a/public/index.html
+++ b/public/index.html
@@ -116,14 +116,14 @@
             <div class="serv-con mt-8 mb-5 flex items-center justify-evenly w-full">
                 <div class="con-1 flex items-center justify-evenly">
                     <div class="box m-1">
-                        <img src="assets/images/descriptions/data.png" alt="Data" class="descriptive-icon w-8 h-8 mb-5">
+                        <img src="assets/images/descriptions/analytics.gif" alt="Data" class="descriptive-icon w-9 h-9 mb-5">
                         <h2 class="text text-lg font-medium mb-3">Data Analysis</h2>
                         <p class="info">
                             Conducting analyses that<br class="text-break hidden"> are insightful and accurate for your needs.
                         </p>
                     </div>
                     <div class="box m-1">
-                        <img src="assets/images/descriptions/coding.png" alt="Coding" class="descriptive-icon w-8 h-8 mb-5">
+                        <img src="assets/images/descriptions/web.gif" alt="Coding" class="descriptive-icon w-9 h-9 mb-5">
                         <h2 class="text text-lg font-medium mb-3">Web Development</h2>
                         <p class="info">
                             Turning concepts into outstanding web app experiences.
@@ -132,14 +132,14 @@
                 </div>
                 <div class="con-2 flex items-center justify-evenly">
                     <div class="box m-1">
-                        <img src="assets/images/descriptions/web-design.png" alt="Design" class="descriptive-icon w-8 h-8 mb-5">
+                        <img src="assets/images/descriptions/design.gif" alt="Design" class="descriptive-icon w-9 h-9 mb-5">
                         <h2 class="text text-lg font-medium mb-3">UI & UX</h2>
                         <p class="info">
                             Creating visually striking designs that resonate with your audience.
                         </p>
                     </div>
                     <div class="box m-1">
-                        <img src="assets/images/descriptions/quality.png" alt="Quality" class="descriptive-icon w-8 h-8 mb-5">
+                        <img src="assets/images/descriptions/quality.gif" alt="Quality" class="descriptive-icon w-9 h-9 mb-5">
                         <h2 class="text text-lg font-medium mb-3">Quality Assurance</h2>
                         <p class="info">
                             Ensuring your vision comes to life with top-tier quality and testing standards.
@@ -155,7 +155,7 @@
             <!-- image & title -->
              <div class="heading flex items-center flex-col">
                 <div class="image-container rounded-full flex items-center justify-center">
-                    <img src="assets/images/descriptions/hand-shake.png" alt="Contact" class="w-24 h-24">
+                    <img src="assets/images/descriptions/talk.gif" alt="Contact" class="w-24 h-24">
                 </div>
 
                 <h1 class="title mt-8 text-6xl gradient-text text-center">
@@ -174,6 +174,7 @@
             </div>
          </section>
 
+         <!--====== FOOTER ======-->
          <footer id="footer" class="footer section container container-padding-1 relative flex items-center flex-col">
             <div class="line mb-12 w-full"></div>
 
