removed stackoverflow links temporarily

--- a/public/index.html
+++ b/public/index.html
@@ -48,14 +48,14 @@
                 <!-- mobile -->
                 <div class="mobile hidden items-center text-xl">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
+                    <!-- <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a> -->
                     <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
                 </div>
                 <!-- desktop -->
                 <div class="desktop text-sm">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank">LinkedIn</a>
-                    <span class="slash font-bold ml-1 mr-1">/</span>
-                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank">Stackoverflow</a>
+                    <!-- <span class="slash font-bold ml-1 mr-1">/</span> -->
+                    <!-- <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank">Stackoverflow</a> -->
                     <span class="slash font-bold ml-1 mr-1">/</span>
                     <a href="https://www.instagram.com/heisdanielade/" target="_blank">Instagram</a>
                 </div>
@@ -188,7 +188,7 @@
                 <!-- social links -->
                 <div class="socials flex items-center justify-center text-xl">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-stack-overflow-line"></i></a>
+                    <!-- <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-stack-overflow-line"></i></a> -->
                     <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a>
                 </div>
             </div>
